Remove GC checks.