@@ -40,6 +40,7 @@ object ReactiveCollectionsBuild extends MechaRepoBuild {
     testFrameworks += new TestFramework("org.scalameter.ScalaMeterFramework"),
     parallelExecution in Test := false,
     fork in Test := true,
+    javaOptions in test += "-Xmx2G -XX:MaxPermSize=384m",
     scalacOptions in (Compile, doc) ++= Seq(
       "-implicits"
     ),
